# spindle

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
bench/: primes_bench.cpp  thread_pool_bench.cpp
examples/: primes.cpp
include/spindle/: latch.h
src/: latch.cpp  latch.h  spindle.cpp  spindle.h  thread_pool.cpp  thread_pool.h  version.h.in  worker.cpp  worker.h
test/: latch_test.cpp  spindle_test.cpp  thread_pool_test.cpp  worker_test.cpp
